@@ -5,7 +5,7 @@ AM_CFLAGS = -Wall
 
 TESTS = movelibs.sh \
 	reloc1.sh reloc2.sh reloc3.sh reloc4.sh reloc5.sh reloc6.sh \
-	reloc7.sh reloc8.sh reloc9.sh reloc10.sh reloc11.sh \
+	reloc7.sh reloc8.sh reloc9.sh reloc10.sh reloc11.sh reloc12.sh \
 	shuffle1.sh shuffle2.sh shuffle3.sh shuffle4.sh shuffle5.sh \
 	shuffle6.sh shuffle7.sh shuffle8.sh shuffle9.sh undo1.sh \
 	layout1.sh layout2.sh unprel1.sh \
