@@ -1,3 +1,10 @@
+2018-10-12   Kyle Russell <bkylerussell@gmail.com>
+	* src/rtld/dl-lookupX.h: Fix rtld segfault when _dl_lookup_symbol_x
+	is NULL on protected symbol relocations
+	* testsuite/Makefile.am, testsuite/reloc12.c, testsuite/reloc12.h,
+	testsuite/reloc12.sh, testsuite/reloc12lib1.c, testsuite/reloc12lib2.c:
+	Add a new test for these relocations
+
 2018-10-12   Mark Hatle <mark.hatle@windriver.com>
 	* Add 'Developer's Certificate of Origin' to patch requirements
 
